# FalconAlliance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  PLOTTING.md  README.md  pyproject.toml  tox.ini
docs/: api.rst  conf.py  getting_started.rst  index.rst  reference.rst  usage.rst
docs/getting_started/: examples.rst  installation.rst  quick_start.rst
docs/reference/: api_client.rst  api_status.rst  award.rst  base_schema.rst  district.rst  event.rst  event_team_status.rst  match.rst  media.rst  plotting.rst  robot.rst  team.rst
falcon_alliance/: __init__.py  api_client.py
falcon_alliance/falcon_alliance_utils/: internal_data.py
falcon_alliance/plotting/: functions.py  plotter.py
falcon_alliance/schemas/: __init__.py  api_status.py  award.py  base_schema.py  event_team_status.py  main_schemas.py  match.py  media.py  robot.py
falcon_alliance/tests/: district_test.py  event_test.py  tba_api_client_test.py  team_test.py  tox_requirements.txt
falcon_alliance/utils/: __init__.py  exceptions.py  functions.py  internal_data.py
src/: __init__.py  api_client.py
src/schemas/: __init__.py  api_status.py  award.py  base_schema.py  event_team_status.py  main_schemas.py  match.py  media.py  robot.py
src/tests/: district_test.py  team_test.py
src/utils/: __init__.py  functions.py  internal_data.py
